[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaspenplus"
version = "0.1.0"
description = "pyaspenplus is a lightweight Python wrapper to interact with Aspen Plus via a programmatic API. Supports both COM backend (Windows/pywin32) and mock backend for testing."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "YuzeHao2023", email = "haoyuze2021@outlook.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: Apache 2.0 License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # pywin32 仅在 Windows 下需要
    "pywin32; platform_system == 'Windows'"
]

[project.urls]
Homepage = "https://github.com/YuzeHao2023/pyaspenplus"
Repository = "https://github.com/YuzeHao2023/pyaspenplus"
Documentation = "https://github.com/YuzeHao2023/pyaspenplus/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
